# rts_lab1

1.1/: CMakeLists.txt  compile_commands.json  example.sh  Протокол 1.1.docx
1.1/src/: corr_common.h  main.cpp  measure.cpp  signal.cpp
1.2/: CMakeLists.txt  example.sh  plot.sh  readme.md  Протокол 1.2.docx
1.2/src/: auto_correlation.cpp  cmp.cpp  correlation.cpp  measure_corr.cpp  signal.h
